--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,20 +9,21 @@
     <link rel=icon href=./favicon.png>
     <title>Vue Argon Design System</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel=stylesheet>
-    <link href=./css/app.99ad3a6a.css rel=preload as=style>
-    <link href=./js/app.052e858a.js rel=preload as=script>
-    <link href=./js/chunk-vendors.6c5e310f.js rel=preload as=script>
-    <link href=./css/app.99ad3a6a.css rel=stylesheet>
+    <link href=./css/app.2062063b.css rel=preload as=style>
+    <link href=./css/chunk-vendors.14a0d658.css rel=preload as=style>
+    <link href=./js/app.6b7c9673.js rel=preload as=script>
+    <link href=./js/chunk-vendors.d4bd7830.js rel=preload as=script>
+    <link href=./css/chunk-vendors.14a0d658.css rel=stylesheet>
+    <link href=./css/app.2062063b.css rel=stylesheet>
 </head>
 <body>
 <noscript>
     <strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript>
-<div id=app></div>
-<script src=./js/chunk-vendors.6c5e310f.js>
+</noscript><div id=app>
 
-</script>
-<script src=./js/app.052e858a.js>
+</div><script src=./js/chunk-vendors.d4bd7830.js>
+
+</script><script src=./js/app.6b7c9673.js>
 
 </script>
 </body>
