--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang=en>
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta content="width=device-width,initial-scale=1,maximum-scale=1.5,user-scalable=1,shrink-to-fit=no" name=viewport>
-    <meta name=description content="Start your development with a Design System for Bootstrap 4 and Vue.js.">
-    <meta name=author content="Creative Tim, Cristi Jora">
-    <link rel=icon href=./favicon.png>
-    <title>Vue Argon Design System</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel=stylesheet>
-    <link href=./css/app.2062063b.css rel=preload as=style>
-    <link href=./css/chunk-vendors.14a0d658.css rel=preload as=style>
-    <link href=./js/app.6b7c9673.js rel=preload as=script>
-    <link href=./js/chunk-vendors.d4bd7830.js rel=preload as=script>
-    <link href=./css/chunk-vendors.14a0d658.css rel=stylesheet>
-    <link href=./css/app.2062063b.css rel=stylesheet>
-</head>
-<body>
-<noscript>
-    <strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript><div id=app>
-
-</div><script src=./js/chunk-vendors.d4bd7830.js>
-
-</script><script src=./js/app.6b7c9673.js>
-
-</script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta content="width=device-width,initial-scale=1,maximum-scale=1.5,user-scalable=1,shrink-to-fit=no" name=viewport><link rel=icon href=favicon.png><title>졸업시스템</title><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel=stylesheet><link href=css/app.0fd1373a.css rel=preload as=style><link href=css/chunk-vendors.bd8d76c4.css rel=preload as=style><link href=js/app.86b25512.js rel=preload as=script><link href=js/chunk-vendors.fdacc3d0.js rel=preload as=script><link href=css/chunk-vendors.bd8d76c4.css rel=stylesheet><link href=css/app.0fd1373a.css rel=stylesheet></head><body><noscript><strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.fdacc3d0.js></script><script src=js/app.86b25512.js></script></body></html>
